overflow fixed

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -25,8 +25,8 @@
 }
 
 @media(max-width:768px) {
-    body {
-        overflow-x: hidden;
+    .container{
+        overflow-x: hidden ;
     }
 
     .nav-list {
